2006-07-24  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: Added preliminary chapter on using the new
	recent files API (RecentManager, RecentChooser, etc).  I really think that
	the recent_files example could use some simplification, but I haven't
	tackled that at all yet.  I'm going to leave out any UIManager / Recent
	files integration for now since it seems like it will be a big manual hack
	until GtkRecentAction gets introduced in GTK+ 2.12
	* examples/book/recent_files/Makefile.am: renamed the executable name that
	seemed to be a copy-paste error and was rather confusing

2.9.9:

2006-07-24  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Depend on glibmm 2.11.3 so that the new defines are available 
	for the (default) --enable-api-default-signal-handlers=yes case.
	* gtk/src/printcontext.hg:
	* gtk/src/printer.hg:
	* gtk/src/printjob.hg:
	* gtk/src/printoperation.hg:
	* gtk/src/printoperationpreview.hg:
	* gtk/src/printsettings.hg:
	* gtk/src/printunixdialog.hg: Use our special newin2p10 doxygen keyword.

2006-07-24  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/widget.hg: Moved the new composited_changed signal to the bottom 
	because that is where I like them, and because adding virtual methods in 
	the middle of other virtual methods changes the offsets of existing 
	virtual methods, breaking ABI. Also, used no_default_signal, to avoid 
	even having a virtual method, which would increase the object size, breaking 
	ABI. I have made this mistake before. This should fix bug #348241. 

2006-07-23  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* gtk/src/recentmanager.hg: change API to use overloaded functions instead
	of different function names.  RecentManager::add_full() was changed to
	RecentManager::add_item() per discussion on mailing list.

2006-07-20  Marko Anastasov <marko@marko.anastasov.name>

	* gtk/src/printoperation.hg: Added the forgotten refreturn for