@@ -1,3 +1,13 @@
+2006-07-25  Murray Cumming  <murrayc@murrayc.com>
+
+	* examples/book/printing/advanced/examplewindow.cc:
+	* examples/book/printing/advanced/printformoperation.cc:
+	* examples/book/printing/advanced/printformoperation.h:
+	* examples/book/printing/simple/examplewindow.cc: Made the two examples more 
+	like each other, so that it is more obvious what is causing the crash, 
+	though I commented out the crashing override, with a comment.
+
+
 2006-07-24  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
 
 	* docs/tutorial/gtkmm-tut.xml: Added preliminary chapter on using the new
